kube/barnard_starcoin-pricereporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starcoin-pricereporter-deployment-barnard
  labels:
    app: starcoin-pricereporter-barnard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starcoin-pricereporter-barnard
  template:
    metadata:
      labels:
        app: starcoin-pricereporter-barnard
    spec:
      containers:
      - name: starcoin-pricereporter-barnard
        image: ghcr.io/starcoinorg/starcoin_pricereporter:sha-93ab531
        ports:
        - containerPort: 8686
