kube/starcoin-pricereporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starcoin-pricereporter-deployment
  labels:
    app: starcoin-pricereporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: starcoin-pricereporter
  template:
    metadata:
      labels:
        app: starcoin-pricereporter
    spec:
      containers:
      - name: starcoin-pricereporter
        image: ghcr.io/starcoinorg/starcoin_pricereporter:sha-b7ca123
        ports:
        - containerPort: 8686
