kube/barnard_starcoin-pricereporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: starcoin-pricereporter-barnard
  name: starcoin-pricereporter-barnard
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 8686
  selector:
    app: starcoin-pricereporter-barnard
  type: LoadBalancer
status:
  loadBalancer: {}
